--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Inter:400,500,600');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
