--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,63 @@
 @tailwind components;
 @tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
+/* Your styles goes here. */
+.typewriter {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid rgb(255, 255, 255); /* The typwriter cursor */
+  white-space: nowrap;
+  max-width: 200px;
+  animation: typing 2s steps(50, end), blink-caret 0.75s step-end 2;
+}
+.typewriter2 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid rgb(255, 255, 255); /* The typwriter cursor */
+  white-space: nowrap;
+  max-width: 240px;
+  animation: hidden 2.2s step-end, typing 2.2s steps(40, end) 2.2s,
+    blink-caret 0.75s step-end 2.2s 2;
+}
+.text-intro {
+  animation: invisible 4.2s step-end, fade-in 2.2s steps(40, end) 4.2s;
+}
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes hidden {
+  from,
+  to {
+    width: 0%;
+  }
+}
+@keyframes invisible {
+  from,
+  to {
+    opacity: 0%;
+  }
+}
+@keyframes fade-in {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from {
+    border-color: transparent;
+  }
+  to {
+    border-color: rgb(0, 0, 0);
+  }
+  50% {
+    border-color: rgb(0, 0, 0);
+  }
+}
