--- a/src/styles.css
+++ b/src/styles.css
@@ -11,15 +11,16 @@
   animation-fill-mode: both;
 }
 @keyframes changeColor {
+
+
   0% {
-    color: rgb(0, 0, 0);
+    color: rgb(223, 223, 223);
   }
 
   50% {
-    color: grey;
+    color: #295B6D;
   }
-
   100% {
-    color: rgb(0, 0, 0);
+    color: rgb(223, 223, 223);
   }
 }
