--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,8 @@
     color: rgb(223, 223, 223);
   }
 }
+
+.radial{
+background: radial-gradient( circle at center in hsl shorter hue, rgba(255,255,255,1) 0%,  rgba(255,255,255,1) 50%, rgba(255,255,255,0) 70%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
