--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
 
 .vibrate {
   color: rgb(0, 0, 0);
+  
   animation: changeColor ease;
   animation-iteration-count: 1;
   animation-duration: 4s;
@@ -14,18 +15,21 @@
 
 
   0% {
-    color: rgb(223, 223, 223);
+    /* color: rgb(223, 223, 223); */
+    color: white;
   }
 
   50% {
     color: #295B6D;
+    /* color: black; */
   }
   100% {
-    color: rgb(223, 223, 223);
+    color: white;
+
   }
 }
 
 .radial{
-background: radial-gradient( circle at center in hsl shorter hue, rgba(255,255,255,1) 0%,  rgba(255,255,255,1) 50%, rgba(255,255,255,0) 70%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 32%, rgba(255,255,255,0) 100%);
 
 }
