--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,20 @@
 }
 
 .radial{
-background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 22%, rgba(255,255,255,0) 100%);
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 22%, rgba(255,255,255,0) 100%);
+}
+summary  {
 
+  list-style: none;
+}
+
+/* sigh, Safari again */
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+
+details[open] > summary > div>  span > svg {
+  transform: rotate(180deg);
 }
